added paragraph to index file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>crap portfolio</title>
   </head>
   <body>
+    <h1>India: Democratic Country</h1>
+    <p>India is my nation. I live here and work here with my family.</p>
 
   </body>
 </html>
